# ml-forecasting-pipeline

./: .env.example  .gitignore  Dockerfile  README.md  dashboard.py  docker-compose.yml  pyproject.toml  requirements.txt  retrain.py  serve.py
.github/workflows/: ci.yml  retrain.yml
src/: backtest.py  config.py  evaluate.py  features.py  fetch.py  register.py  train_lstm.py  train_prophet.py  train_xgboost.py  tune.py
tests/: test_evaluate.py  test_features.py
