[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ml-forecasting-pipeline"
version = "1.0.0"
description = "Production-grade stock forecasting pipeline: XGBoost · Prophet · LSTM + MLflow + FastAPI"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"
